--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous" />
+    <style>
+        body {
+            background: #99bfe6; 
+            background: linear-gradient(
+            to right,
+             #d1e708,
+             #3d5ff7
+            );
+      }
+    </style>
     <title>Axios Task</title>
   </head>
   <body>
